[metadata]
name = gravure
version = attr: gravure._version.version
author = Gilles Coissac
author_email = gilles@ideographe.fr
maintainer = Gilles Coissac
maintainer_email = gilles@ideographe.fr
url = https://github.com/gravures/gravure
classifiers =
    Development Status :: 1 - Dev
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Printing
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
license = GPLv3+
license_file = LICENSE
description = Python library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
	graphic
    print
    rip
    pdf
    postscipt
    dtp
    macOS
    windows
    Linux
platforms = any

[options.packages.find]
where = src

[options]
packages = find:
python_requires = >= 3.7
install_requires =
package_dir =
    = src
zip_safe = False

[bdist_wheel]
    universal=0

[options.entry_points]


[options.extras_require]
	test =
		pytest
		pytest-venv

[build_sphinx]
project = gravure
source-dir = docs/source
build-dir = docs/build